# nerf-papers

./: .gitignore  README.md  pyproject.toml
notebooks/: 3Dconstructino.ipynb  Untitled1.ipynb  fourier_nerf.ipynb  ingp-1.ipynb  nerf_reconstruction.ipynb  render-experiments.ipynb  voxel_reconstruction.ipynb
src/encodings/: mrhe.py  spherical_harmonic_encoding.py
src/lf_model/: fourier_nerf.py  nerf.py  voxel.py
src/runners/: fourier_nerf.py  og_nerf.py
src/utils/: bookkeeping.py  metrics.py  render.py
src/utils/dataset/: common.py  fox_dataset.py  lego_dataset.py  llff_dataset.py
