[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "nerf"
version = "0.1.0"
description = "My experments with Volumetric rendering"
authors = ["Ayush Sharma <ayush.cs.umass@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.*"
#distutils = "*"
torch = { version = "^1.9.0", extras = ["torchvision"] }
opencv-python-headless = "^4.5.3"  # OpenCV without GUI backend
matplotlib = "^3.4.3"
seaborn = "^0.11.2"
jupyterlab = "^3.2.0"
jupyter-server = { version = "1.11.0", python = ">=3.7,<3.8" }
tqdm = "^4.65.0"
pymcubes = "^0.1.4"
trimesh = "^3.22.0"
sympy = "^1.12"
torch-harmonics = "^0.6.1"
opencv-python = "^4.7.0.72"
